Change button hover to prevent align issues

--- a/frontend/src/components/button/Button.css
+++ b/frontend/src/components/button/Button.css
@@ -12,8 +12,7 @@
 }
 
 .button:hover {
-  width: 11.75rem;
-  height: 3.9rem;
+  transform: scale(0.96);
   box-shadow: 0px 5px 5px rgba(51, 96, 255, 0.65);
   font-size: 1.95rem;
 }
